src/components/ui/gameplay/question/question.module.css
.container {
  width: 100%;
  height: 60vh;
  position: relative;
}

.header {
  font-size: 1.8rem;
  color: var(--innerbackground);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-self: center;
}

.header > div:nth-child(2) {
  font-size: 1.4rem;
  font-family: "Helvetica 500";
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

.smallCountContainer {
  width: 2.4rem;
  height: 2.4rem;
  border-radius: 2.4rem;
  background-color: var(--primary);
  position: relative;
  font-family: sans-serif;
}

.smallCountContainer > div:nth-child(1) {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 2rem;
  height: 2rem;
  border-radius: 2rem;
  background-color: #fff;
  font-family: sans-serif;
}

.timer {
  margin-left: 1rem;
}

.questionContainer {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: start;
  margin-top: 1rem;
  align-self: flex-end;
}

.questionContainer > div:nth-child(1) {
  width: 3rem;
  height: 100%;
  color: var(--innerbackground);
  font-family: "Helvetica 700";
  font-size: 1.6rem;
}

.question {
  color: var(--innerbackground);
  font-family: "Helvetica 400";
  font-size: 1.6rem;
  max-height: 5.5rem;
  width: 100%;
  overflow-y: auto;
}
.question > div:nth-child(1) {
  width: 100%;
  overflow-y: auto;
  scroll-behavior: smooth;
}
.question p {
  color: var(--innerbackground);
  font-family: "Helvetica 400";
  font-size: 1.6rem;
}

.mainContent {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 65%;
}

.answerContainer {
  margin-top: 3rem;
  max-height: 45vh;
  overflow-y: auto;
  padding: 0 1rem;
}

.answer {
  width: 100%;
  height: 4rem;
  border: 0.1rem solid var(--primary);
  background-color: var(--innerbackground);
  padding: 0 1rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-top: 1.1rem;
  font-size: 1.5rem;
  font-family: "Helvetica 700";
  color: var(--black);
}

.answer:hover {
  cursor: pointer;
}

.selected {
  background-color: var(--active);
}

.buttonContainer {
  margin-top: 2rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.buttonContainer > div:nth-child(1) {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
  color: var(--primary);
  font-size: 1.6rem;
  font-family: "helvetica 400";
}

.buttonContainer > div:nth-child(1):hover {
  cursor: pointer;
}

.button {
  display: inline-block;
  text-align: center;
  border: 0.1rem solid transparent;
  font-size: 1.6rem;
  padding: 0.5rem 3rem;
  background-color: var(--primary);
  border-radius: 0.1rem;
  color: var(--black);
}

.buttonDisabled {
  display: inline-block;
  text-align: center;
  border: 0.1rem solid transparent;
  font-size: 1.6rem;
  padding: 0.5rem 3rem;
  background-color: #969696;
  border-radius: 0.1rem;
  color: var(--black);
}

.button:hover {
  cursor: pointer;
}

.mediaContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 90%;
  background-color: var(--light_black);
  z-index: 200;
}
.mediaContainer > div:nth-child(1) {
  font-size: 1.3rem;
  font-family: "helvetica 300";
  color: var(--innerbackground);
  margin-bottom: 1rem;
}
/* .mediaContainer > div:nth-child(2) {
  display: flex;
  justify-content: center;
  align-items: flex-start;
} */

.label {
  font-size: 1.7rem;
  font-family: "helvetica 500";
  color: var(--primary-light);
}

.makeDecision {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
}

.userbadge {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 2.4rem;
  height: 2.4rem;
  border-radius: 2.4rem;
  background-color: var(--primary);
  color: var(--black);
  font-size: 1rem;
  font-family: "helvetica 500";
  margin-right: 0.2rem;
  padding-top: 0.3rem;
}
.vote {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  gap: 0.4rem;
}

.voteCount {
  color: #2d2d2d;
  font-size: 1.1rem;
  font-family: "helvetica 400";
}

.repeatIcon {
  display: inline;
  width: 2rem;
  height: 2rem;
  fill: var(--primary);
}
.canvas {
  height: 35rem;
  overflow: auto;
}

.skipContainer {
  margin-top: 1rem;
  width: 100%;
  height: 3.6rem;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  background-size: 50%;
  background-position: right;
  background-repeat: no-repeat;
}

/* @media (min-width: 576px) and (max-width: 992px) {
  .mainContent {
    height: 50%;
  }
} */

@media (max-height: 530px) {
  .canvas {
    height: 20rem;
  }
  .mediaContainer {
    height: 75%;
  }
}
@media (min-height: 531px) and (max-height: 550px) {
  .canvas {
    height: 21rem;
  }
  .mediaContainer {
    height: 80%;
  }
}
@media (min-height: 551px) and (max-height: 599px) {
  .canvas {
    height: 23rem;
  }
  .mediaContainer {
    height: 82%;
  }
}
@media (min-height: 600px) and (max-height: 650px) {
  .canvas {
    height: 28rem;
  }
  .mediaContainer {
    height: 85%;
  }
}
@media (min-height: 651px) and (max-height: 720px) {
  .canvas {
    height: 32rem;
  }
}

